<resources>
    <string name="app_name">Tech Store</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sales">On sale</string>
    <string name="newest">New items</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>

    <string name="order_history">History orders</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="stores">Our stores</string>
    <string name="phone">0985899858</string>
    <string name="mail">support@tech.store</string>
    <string name="inst">tech.store</string>
    <string name="site">techstore.com</string>
    <string name="about">About app</string>

    <string name="novaposhta">Нова пошта</string>
    <string name="ukrposhta">Укрпошта</string>
    <string name="justin">Justin</string>
    <string name="bycard">By card</string>
    <string name="googlepay">Google pay</string>
    <string name="applepay">Apple pay</string>

    <string name="back">Back</string>
    <string name="add">Add to cart</string>

    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="contact">Contact info</string>
    <string name="delivery">Delivery</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="department">Department number</string>
    <string name="payment_method">Payment method</string>

    <string name="confirm">Confirm</string>

    <string name="price">$ 0</string>
    <string name="color">Color: Deep Purple</string>

    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>

    <string name="register">Registration</string>
    <string name="login">Login</string>
    <string name="login_u"><u>Login</u></string>
    <string name="register_u"><u>Registration</u></string>

    <string name="already">Already have an account?</string>
    <string name="havent">Want to create an account?</string>
    <string name="fill">Fill all!</string>
    <string name="deleted">Deleted</string>
    <string name="added">Added</string>
    <string name="completed">Completed</string>
    <string name="error">Error</string>
    <string name="error_product">Error with products loading</string>

    <string name="empty">Add some items!</string>

    <string name="card_number">Card number</string>
    <string name="card_holder">Holder name</string>
    <string name="card_cvv">CVV code</string>
    <string name="add_bt">Add</string>
    <string name="yy">YY</string>
    <string name="mm">MM</string>

    <string name="empty_result">No products were found for your request</string>
    <string name="want_find">Want to find</string>
    <string name="result_for">Result for</string>

</resources>