<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.CartFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/cart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="2"
            tools:itemCount="5"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/item_cart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="16sp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/cart_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/empty" />

    <Button
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/action_button"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:text="@string/order"
        android:layout_gravity="bottom"
        android:textColor="@color/white"/>

</FrameLayout>