<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OrderFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/favorites" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="1"
            tools:listitem="@layout/item_confirm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="16sp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="3"
            tools:listitem="@layout/text_input_item" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="3"
            tools:listitem="@layout/item_select_input" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="3"
            tools:listitem="@layout/text_input_item" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="3"
            tools:listitem="@layout/item_select_input" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/action_button"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:text="@string/confirm"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>